# spothound-desktop

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  LICENSE  captchaawarepage.h  cityregistry.cpp  cityregistry.h  googlemapsscraper.cpp  loggingpage.h  main.cpp  mainwindow.cpp  mainwindow.ui  placesmodel.cpp  resources.qrc  rules.cpp  spothound.rc  stopwordsdialog.cpp  twogisscraper.cpp  yandexscraper.cpp
.claude/: settings.json
.github/workflows/: acceptance.yml  qt-ci.yml
docs/architecture/: README.md  c4-components.md  c4-containers.md  c4-context.md  c4-dynamic-scrape.md  c4-future.md
installers/linux/: spothound.desktop
src/: captchaawarepage.cpp  cityregistry.cpp  cityregistry.h  filterdialog.cpp  filterdialog.h  googlemapsscraper.cpp  loggingpage.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  place_row_convert.h  placerow.h  placesmodel.cpp  placesmodel.h  rules.cpp  rules.h  scrapetask.cpp  scrapetask.h  stopwordsdialog.h  stopwordsdialog.ui  stopwordsstore.cpp  stopwordsstore.h  twogisscraper.cpp  twogisscraper.h  yandexscraper.cpp  yandexscraper.h
src/adapters/qt/: captchaawarepage.h  googlemapsscraper.cpp  googlemapsscraper.h  scrapetask.cpp  scrapetask.h  stopwordsstore.cpp  stopwordsstore.h  twogisscraper.cpp  yandex_js.h  yandexcollector.cpp  yandexcollector.h  yandexparser.cpp  yandexparser.h  yandexscraper.cpp  yandexscraper.h
src/core/: CMakeLists.txt  city_registry.cpp  city_registry.h  csv_export.cpp  csv_export.h  geo_grid.cpp  geo_grid.h  i_scraper.h  place_row.h  place_row_json.h  rules.cpp  rules.h  scrape_stats.h  scraper_events.h  stop_words_filter.cpp  stop_words_filter.h
src/gui/: hintlistwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  placesmodel.h
tests/core/: CMakeLists.txt  test_city_registry.cpp  test_csv_export.cpp  test_geo_grid.cpp  test_place_row_json.cpp  test_rules.cpp  test_scrape_stats.cpp  test_stop_words_filter.cpp
tests/integration/: CMakeLists.txt  main.cpp  test_acceptance.cpp  test_yandex_integration.cpp
tests/scraper/: CMakeLists.txt  main.cpp  test_yandex_card.cpp
tests/scraper/fixtures/: card_basic.html  card_data_testid.html  card_no_contact.html  card_phone_in_body.html  card_social.html
